blog-app-gitops-deployment/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-blog-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vite-blog-app
  template:
    metadata:
      labels:
        app: vite-blog-app
    spec:
      containers:
      - name: vite-blog-app
        image: kelomo2502/vite-blog-app:v3
        ports:
          - containerPort: 80
