blog-app-gitops-deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-blog-service
spec:
  type: ClusterIP  # Change from NodePort to ClusterIP
  selector:
    app: vite-blog-app
  ports:
    - protocol: TCP
      port: 80       # Internal service port
      targetPort: 80  # Container's port
