blog-app-gitops-deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: blog-app.com  # This can be anything, even a fake domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vite-blog-service
                port:
                  number: 80
